libs/extractor/tests/snapshots/all_tests__import_alias_skip_when_package_not_in_code.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import React from 'react'\nconst element = <div>Hello</div>\"#, ExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: aliases\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import React from 'react'\nconst element = <div>Hello</div>",
}
